<resources>
    <string name="app_name">Mobile Application</string>
    <string name="courseApp">The course App</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="registera">Register App</string>
    <string name="teacherwelcome">Welocome User Name</string>
    <string name="subject1">Subject</string>
    <string name="teachMSG">Message</string>
    <string name="tchsend">Send</string>
    <string name="item1">Item 1</string>
    <string name="subitem1">Sub item 1</string>
    <string name="subject">Subject</string>
    <string name="msg">Message</string>
</resources>
